--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -224,14 +224,14 @@ layout: default
 <body>
 
 <!-- 상단 고정 광고 -->
-<div class="anchor-ad-top">
+<div class="anchor-ad-top" style="text-align: center; padding-top: 10px;">
   <ins class="adsbygoogle"
-  style="display:inline-block;width:728px;height:90px"
-  data-ad-client="ca-pub-9374368296307755"
-  data-ad-slot="3603389079"></ins>
-<script>
- (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+       style="display:inline-block;width:728px;height:90px"
+       data-ad-client="ca-pub-9374368296307755"
+       data-ad-slot="3603389079"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </div>
 
 <!-- 본문 콘텐츠 -->
