--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -187,17 +187,17 @@ layout: default
             crossorigin="anonymous"></script>
     
     <style>
+        /* 본문 상단에 고정된 광고 */
         .anchor-ad-top {
             position: fixed;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%) scale(0.5); /* 중앙 정렬 및 50% 크기로 축소 */
-            transform-origin: top center;
-            width: 728px;
-            height: 90px;
+            left: 0;
+            width: 100%;
+            height: 90px; /* 광고 높이 */
             background-color: #fff;
-            z-index: 1002;
-            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+            z-index: 10000; /* 다른 요소 위에 표시 */
+            text-align: center; /* 광고를 중앙에 위치 */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
         }
 
         .anchor-ad-bottom {
