--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -31,9 +31,10 @@ layout: default
       <!-- 제목 위에 고정된 광고 -->
       <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
           <ins class="adsbygoogle"
-               style="display:inline-block;width:728px;height:90px"
+               style="display:block"
+               data-ad-format="autorelaxed"
                data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="3603389079"></ins>
+               data-ad-slot="4454543532"></ins>
           <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
@@ -88,6 +89,17 @@ layout: default
   {% endif %}
 </div>
 
+<!-- Google AdSense 스크립트 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+        crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-9374368296307755"
+     data-ad-slot="4454543532"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 
