--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -22,69 +22,61 @@ layout: default
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
-    {% if page.title %}
-      <meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">
-    {% endif %}
-    {% if page.excerpt %}
-      <meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">
-    {% endif %}
+    {% if page.title %}<meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html |--fi가></fi strip_html | --}}
+      <!-- 상단 광고-->
+      <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-format="autorelaxed"
+               data-ad-client="ca-pub-9374368296307755"
+               data-ad-slot="4454543532"></ins>
+          <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+      </div>
 
-    <!-- 상단 광고-->
-    <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-format="autorelaxed"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="4454543532"></ins>
-      <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-
-    {% unless page.header.overlay_color or page.header.overlay_image %}
-      <header>
-        {% if page.title %}
+      {% unless page.header.overlay_color or page.header.overlay_image %}
+        <header>
+          {% if page.title -%}
           <h1 id="page-title" class="page__title" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
           </h1>
+          {%- endif %}
+          {% include page__meta.html %}
+        </header>
+      {% endunless %}
+
+      <section class="page__content" itemprop="text">
+        {% if page.toc %}
+          <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
+            <nav class="toc">
+              <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
+              {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
+            </nav>
+          </aside>
         {% endif %}
-        {% include page__meta.html %}
-      </header>
-    {% endunless %}
+        {{ content }}
 
-    <section class="page__content" itemprop="text">
-      {% if page.toc %}
-        <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
-          <nav class="toc">
-            <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
-            {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
-          </nav>
-        </aside>
-      {% endif %}
-      {{ content }}
+        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+      </section>
 
-      {% if page.link %}
-        <div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>
-      {% endif %}
-    </section>
+      <footer class="page__meta">
+        {% if site.data.ui-text[site.locale].meta_label %}
+          <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
+        {% endif %}
+        {% include page__taxonomy.html %}
+        {% include page__date.html %}
+      </footer>
 
-    <footer class="page__meta">
-      {% if site.data.ui-text[site.locale].meta_label %}
-        <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
-      {% endif %}
-      {% include page__taxonomy.html %}
-      {% include page__date.html %}
-    </footer>
+      {% if page.share %}{% include social-share.html %}{% endif %}
+      {% include post_pagination.html %}
+    </div>
 
-    {% if page.share %}
-      {% include social-share.html %}
+    {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
+      {% include comments.html %}
     {% endif %}
-    {% include post_pagination.html %}
   </article>
-
-  {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
-    {% include comments.html %}
-  {% endif %}
 
   {% if page.id and page.related and site.related_posts.size > 0 %}
     {% include page__related.html posts=site.related_posts %}
@@ -92,7 +84,6 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
-
 
 
 <!-- Google AdSense 스크립트 -->
@@ -311,79 +302,5 @@ function shouldShowPopup() {
 }
 </script>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Random Redirect with Popup</title>
-<style>
-  /* 팝업 스타일 */
-  #popupOverlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #popup {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    width: 300px;
-  }
-
-  #popup button {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-</style>
-
-
-
-<div id="popupOverlay">
-  <div id="popup">
-    <p>5초 후 다른 페이지로 이동합니다. 이동을 원하지 않으면 닫기 버튼을 클릭하세요.</p>
-    <button onclick="cancelRedirect()">닫기</button>
-  </div>
-</div>
-
-<script>
-  // Jekyll에서 _posts 파일 경로를 JavaScript로 전달
-  const postUrls = [
-    {% for post in site.posts %}
-      "{{ post.url }}"{% if forloop.last == false %},{% endif %}
-    {% endfor %}
-  ];
-
-  // 팝업을 표시하는 함수
-  function showPopup() {
-    document.getElementById('popupOverlay').style.display = 'flex';
-  }
-
-  // 리디렉션 취소 함수
-  function cancelRedirect() {
-    clearTimeout(redirectTimeout);
-    document.getElementById('popupOverlay').style.display = 'none';
-  }
-
-  // 5~8초 후에 랜덤한 _posts 페이지로 이동 설정
-  const redirectTimeout = setTimeout(function() {
-    const randomUrl = postUrls[Math.floor(Math.random() * postUrls.length)];
-    window.location.href = randomUrl;
-  }, Math.floor(Math.random() * 3000) + 5000); // 5000ms ~ 8000ms
-
-  // 페이지 로드 후 팝업 표시
-  window.onload = showPopup;
-</script>
 </body>
 </html>
